--- a/layouts/Main_Sec.css
+++ b/layouts/Main_Sec.css
@@ -1,40 +1,11 @@
-@import url(Colores.css);
-.main__secondary {
-    width:100%;
-    display:grid;
-    place-items:center
-    ba
-}
-.main__secondary .contenedor__principal {
-    width:85%;
-    display:grid;
-    grid-template-columns:repeat(3,1fr);
-    gap:1em
-}
-.main__secondary article {
-    width:100%
-}
-.main__secondary .item2-grid {
-    width:100%;
-    background-color:var(--Sky-500);
-    display:grid;
-    padding:1em;
-    grid-template-columns:repeat(3,1fr);
-    grid-template-rows:repeat(2,1fr)
-}
-.main__secondary .item1 {
-    width:100%;
-    display:flex;
-    align-items:center;
-    justify-content:center
-}
 #swiper-4 {
-    width:25em;
+    max-width:25em;
     z-index:0;
     grid-column:2/3
 }
 #swiper-5 {
-    height:45vh;
+    width: auto;
+    max-height:40vh;
     z-index:0
 }
 #swiper-5 .swiper-wrapper {
@@ -44,21 +15,21 @@
 }
 #swiper-5 .swiper-wrapper .swiper-slide {
     width:100%;
-    height:4vh
+    height:10vh
 }
 #swiper-5 img {
     display:block;
-    height:45vh;
+    height:40vh;    
     object-fit:cover
 }
-.main__secondary .item2-grid .emg {
+.item2-grid .emg {
     width:100%;
     display:grid;
     place-items:center;
     grid-row:1/3;
     grid-column:1/4
 }
-.main__secondary .item2-grid .emg img {
+.item2-grid .emg img {
     width:100%;
     object-fit:cover
 }
