--- a/src/scss/modules/_modulo04.scss
+++ b/src/scss/modules/_modulo04.scss
@@ -2,7 +2,8 @@
 .contenedor{
     .contenedor-centrar{
         .aviso-grid{
-            @extend %grid-3;
+            // @extend %grid-3;
+            @include m.grid(3,1em);
             @include m.desktop{
                 display: grid;
                 grid-template-columns: 100%;
