--- a/src/scss/modules/_modulo01.scss
+++ b/src/scss/modules/_modulo01.scss
@@ -1,9 +1,9 @@
 @use '../base/mixins' as m;
 .contenedor{
     .contenedor-grid{
-        .item-2{
-            grid-column: 2/4;
-        }
+        display: flex;
+        justify-content: space-between;
+        gap: 1em;
         @include m.desktop{
             display: flex;
             flex-direction: column;
