--- a/src/scss/modules/_modulo02.scss
+++ b/src/scss/modules/_modulo02.scss
@@ -7,6 +7,7 @@
         .contenedor-conac{
             width: 100%;
             @include m.grid(4,v.$separacion);
+            
             a{
                 display: flex;
                 align-items: center;
@@ -21,7 +22,7 @@
                 font-weight: 600;
                 border-radius: .5em;
                 border: solid c.$Slate-700;
-                @include m.neo(90px);
+                @include m.neo(.145em);
                 color: c.$Gray-100;
             }
             @include m.desktop{
