--- a/PaginaWeb/css/Estilos/app.css
+++ b/PaginaWeb/css/Estilos/app.css
@@ -649,7 +649,7 @@ body {
   font-size: 1.7em;
   text-align: center;
   height: 5em;
-  background-image: url(/img/pngegg.png);
+  background-image: url(/PaginaWeb/img/pngegg.webp);
   background-position: center;
   background-size: cover;
   text-shadow: 2px 2px 0.2em #475569;
