--- a/src/scss/modules/_modulo02.scss
+++ b/src/scss/modules/_modulo02.scss
@@ -15,7 +15,7 @@
                 font-size: 1.7em;
                 text-align: center;
                 height: 5em;
-                background-image: url(/img/pngegg.png);
+                background-image: url(/PaginaWeb/img/pngegg.webp);
                 background-position: center;
                 background-size: cover;
                 text-shadow: 2px 2px .2em c.$Slate-600;
