--- a/PaginaWeb/css/Estilos/app.css
+++ b/PaginaWeb/css/Estilos/app.css
@@ -786,6 +786,55 @@ body {
   }
 }
 
+.priv {
+  background: linear-gradient(327deg, #878787 8%, #989696 17%, #a8a8a8 23%, #aeaeae 29%, #bababa 35%, #b2b2b2 40%, #c6c6c6 47%, #cfcfcf 61%, #858585 78%);
+  margin-bottom: 2em;
+  font-size: 1em;
+}
+.priv ul {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-flow: row;
+}
+.priv ul li a {
+  text-align: center;
+  transition: 0.2s ease-in-out;
+  padding: 1em 0;
+  font-weight: 600;
+}
+@media (max-width: 1245px) {
+  .priv {
+    display: grid;
+    grid-auto-columns: repeat(3, 1fr);
+  }
+}
+
+.priva:hover {
+  background-color: #743089;
+  color: #e2e8f0;
+}
+
+.datos:hover {
+  background-color: #c4579b;
+  color: #e2e8f0;
+}
+
+.trami:hover {
+  background-color: #96c11f;
+  color: #e2e8f0;
+}
+
+.super:hover {
+  background-color: #e8b900;
+  color: #e2e8f0;
+}
+
+.traba:hover {
+  background-color: #f49929;
+  color: #e2e8f0;
+}
+
 #swiper-1 .swiper-slide img {
   display: block;
   width: 100%;
