--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -52,48 +52,48 @@ header .ul{
 }
 
 /*? Menu Flotante  */
-.nav .ul .li .mini{
-    display: none;
-    position: absolute;
-    width: 5em;
-    background-color: c.$Gray-500;
-    transition: all .2s ease-in-out;
-}
-.nav .ul .li:hover .mini{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 25em;
-    @include m.neo(20px);
-}
-.mini a{
-    padding: .6em;
-    transition: all .2s ease-in-out;
-    color: white;
-}
-.mini .elemento1:hover{
-    background-color: #743089;
-}
-.mini .elemento2:hover{
-    background-color: #FECC0D;
-}
-.mini .elemento3:hover{
-    background-color: #EA5095;
-}
-.mini .elemento4:hover{
-    background-color: #00A8E2;
-}
-.mini .elemento5:hover{
-    background-color: #96C11F;
-}
+// .nav .ul .li .mini{
+//     display: none;
+//     position: absolute;
+//     width: 5em;
+//     background-color: c.$Gray-500;
+//     transition: all .2s ease-in-out;
+// }
+// .nav .ul .li:hover .mini{
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     width: 25em;
+//     @include m.neo(20px);
+// }
+// .mini a{
+//     padding: .6em;
+//     transition: all .2s ease-in-out;
+//     color: white;
+// }
+// .mini .elemento1:hover{
+//     background-color: #743089;
+// }
+// .mini .elemento2:hover{
+//     background-color: #FECC0D;
+// }
+// .mini .elemento3:hover{
+//     background-color: #EA5095;
+// }
+// .mini .elemento4:hover{
+//     background-color: #00A8E2;
+// }
+// .mini .elemento5:hover{
+//     background-color: #96C11F;
+// }
 /** Menu Hamburgesa */
-.header .button{
-    display: none;
-}
-header .button{
-    display: none;
-    cursor: pointer;
-}
+// .header .button{
+//     display: none;
+// }
+// header .button{
+//     display: none;
+//     cursor: pointer;
+// }
 /** Fin Menu Hamburguesa */
 // .btn-gray i, .btn-invert i, .font-control, .bi-facebook{
 //     cursor: pointer;
@@ -128,7 +128,7 @@ header .button{
 }
 .nav__secondary {
     width:100%;
-    margin-top: .5em;
+    margin-top: 5.5em;
 }   
 .nav__secondary{
     .contenedor__barra{
